--- a/japTest/src/main/resources/application.properties
+++ b/japTest/src/main/resources/application.properties
@@ -2,6 +2,22 @@ spring.application.name=japTest
 
 #Thymeleaf SET
 
-spring.thymeleaf.prifix=classpath:/templates/
-spring.thymeleaf.sufflx=.html
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+#Database SET
+
+spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/burnout
+spring.datasource.username=burnout
+spring.datasource.password=1234
+
+#JPA SET
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
+spring.jpa.properties.hibernate.type.descriptor.sql=trace
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
